--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
